--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,7 @@ img {
 .menu li {
 		position: relative;
 		float: left;
-		left: 20px;
-		padding: 10px 40px 10px 30px;
+		padding: 12px 30px;
 		border-left: 1px solid transparent;
 }
 
@@ -41,13 +40,13 @@ img {
 
 /*SIDEBAR, CONTENT*/
 .clearfix::after {
-	  content: '';
+		content: '';
 		clear: both;
 		display: block;
 }
 
 .conteiner {
-		padding: 20px 0;
+		padding: 30px 0;
 }
 
 .sidebar {
@@ -55,27 +54,26 @@ img {
 		float: left;
 }
 
+.sidebar ul {
+		display: flex;
+		flex-direction: column;
+		width: 80%;
+}
+
 .sidebar a {
+		display: block;
+		width: auto;
+		padding-left: 24px;
+		border: 1px solid #999;
 		color: #999;
+		line-height: 36px;
 		text-decoration: none;
 }
 
-.sidebar li {
-		 padding: 10px 10px 10px 20px;
-		 border: 1px solid #999;
-		 text-align: left;
-}
-
-.sidebar ul {
-		 margin-right: 15%;
-}
-
 .sidebar a:hover {
+		padding-left: 34px;
+		background-color: #f9f9f9;
 		color: #333;
-}
-
-.sidebar ul li:hover {
-		text-indent: 20px;
 }
 
 .content {
@@ -84,8 +82,8 @@ img {
 }
 
 .content img {
-		 max-width: 100%;
-		 margin: 0 auto;
+		max-width: 100%;
+		margin: 0 auto;
 }
 
 .content p {
@@ -96,23 +94,33 @@ img {
 
 	/*FOOTER*/
 .footer {
+		display: flex;
+		flex-direction: row;
 		padding-bottom: 35px;
 }
 
-.footer a {
-		color: #000;
-		text-decoration: none;
-}
-
-.menu2 {
+.footer ul {
+		width: 80%;
+		display: flex;
 		background: #ccc;
 }
 
-.menu2 li {
-		float: left;
-		padding: 10px 40px 10px 30px;
+.footer a {
+		display: block;
+		padding: 0 30px;
+		color: #000;	
+		line-height: 40px;
+		text-decoration: none;
 }
 
-.footer ul li:last-child {
-		float: right;
+.footer a:hover {
+		text-decoration: underline;
+}
+
+.footer p {
+		width: 20%;
+		padding-right: 25px;
+		background-color: #ccc;
+		line-height: 40px;
+		text-align: right;
 }
